--- a/qtfile.mustache
+++ b/qtfile.mustache
@@ -1,6 +1,8 @@
+#include <fstream>
+#include <iostream>
+
 #include <windows.h>
 #include <detours.h>
-#include <stdio.h>
 
 #include <QtCore/QObject>
 #include <QtCore/qobjectdefs.h>
@@ -16,6 +18,9 @@ typedef int (WINAPI qt_metacall_signature)(QMetaObject::Call _c, int _id, void *
     __asm mov ret_var, eax\
 }
 
+std::ofstream logfile;
+DWORD start;
+
 {{#classes}}
 {{#do}}
 qt_metacall_signature* {{metacall_address_name}} = (qt_metacall_signature*)(void*){{metacall_function_address}};
@@ -30,6 +35,15 @@ int WINAPI {{metacall_hook_name}}(QMetaObject::Call _c, int _id, void **_a) {
     if (ret_id < 0) {
         return ret_id;
     } else {
+        if (_c == QMetaObject::InvokeMetaMethod){
+            switch (ret_id) {
+                {{#methods}}
+                case {{id}}:
+                    logfile<<(GetTickCount()-start)/1000.0<<"s: {{name}}::{{signature}} called"<<std::endl;
+                    break;
+                {{/methods}}
+            }
+        }
         METACALL({{metacall_address_name}}, _c, _id, _a, _id)
         return _id;
     }
@@ -42,7 +56,7 @@ BOOL DllProcessAttach(HINSTANCE hinst) {
     if (NO_ERROR != (errCode = DetourTransactionBegin())) {
         switch (errCode) {
             case ERROR_INVALID_OPERATION:
-                printf("DetourTransactionBegin failed\n\tA pending transaction alrady exists.");
+                std::cout<<"DetourTransactionBegin failed. A pending transaction already exists."<<std::endl;
                 break;
         }
         return FALSE;
@@ -51,7 +65,7 @@ BOOL DllProcessAttach(HINSTANCE hinst) {
     if (NO_ERROR != (errCode = DetourUpdateThread(GetCurrentThread()))) {
         switch (errCode) {
             case ERROR_NOT_ENOUGH_MEMORY:
-                printf("DetourUpdateThread failed\n\tNot enough memory to record identity of thread.");
+                std::cout<<"DetourUpdateThread failed. Not enough memory to record identity of thread."<<std::endl;
                 break;
         }
         DetourTransactionAbort();
@@ -62,16 +76,16 @@ BOOL DllProcessAttach(HINSTANCE hinst) {
         if (NO_ERROR != (errCode = DetourAttach(&(PVOID&){{metacall_address_name}}, &{{metacall_hook_name}}))) {
             switch (errCode) {
                 case ERROR_INVALID_BLOCK:
-                    printf("DetourAttach failed\n\tThe function referenced is too small to be detoured.");
+                    std::cout<<"DetourAttach failed. The function referenced is too small to be detoured."<<std::endl;
                     break;
                 case ERROR_INVALID_HANDLE:
-                    printf("DetourAttach failed\n\tThe ppPointer parameter is null or points to a null pointer.");
+                    std::cout<<"DetourAttach failed. The ppPointer parameter is null or points to a null pointer."<<std::endl;
                     break;
                 case ERROR_INVALID_OPERATION:
-                    printf("DetourAttach failed\n\tNo pending transaction exists.");
+                    std::cout<<"DetourAttach failed. No pending transaction exists."<<std::endl;
                     break;
                 case ERROR_NOT_ENOUGH_MEMORY:
-                    printf("DetourAttach failed\n\tNot enough memory exists to complete the operation.");
+                    std::cout<<"DetourAttach failed. Not enough memory exists to complete the operation."<<std::endl;
                     break;
             }
             DetourTransactionAbort();
@@ -82,13 +96,13 @@ BOOL DllProcessAttach(HINSTANCE hinst) {
     if (NO_ERROR != (errCode = DetourTransactionCommit())) {
         switch (errCode) {
             case ERROR_INVALID_DATA:
-                printf("DetourTransactionCommit failed. Target function was changed by third party between steps of the transaction.");
+                std::cout<<"DetourTransactionCommit failed. Target function was changed by third party between steps of the transaction."<<std::endl;
                 break;
             case ERROR_INVALID_OPERATION:
-                printf("DetourTransactionCommit failed. No pending transaction exists.");
+                std::cout<<"DetourTransactionCommit failed. No pending transaction exists."<<std::endl;
                 break;
             default:
-                printf("DetourTransactionCommit failed. Other error.");
+                std::cout<<"DetourTransactionCommit failed. Other error."<<std::endl;
                 break;
         }
         DetourTransactionAbort();
@@ -101,8 +115,7 @@ BOOL DllProcessDetach() {
     DetourTransactionBegin();
     DetourUpdateThread(GetCurrentThread());
     {{#classes}}{{#do}}
-    DetourDetach(&(PVOID&){{metacall_address_name}}, {{metacall_hook_name}});
-    {{/do}}{{/classes}}
+    DetourDetach(&(PVOID&){{metacall_address_name}}, {{metacall_hook_name}});{{/do}}{{/classes}}
     DetourTransactionCommit();
     return TRUE;
 }
@@ -111,8 +124,11 @@ BOOL WINAPI DllMain(HINSTANCE hinst, DWORD dwReason, LPVOID reserved)
 {
     switch (dwReason) {
         case DLL_PROCESS_ATTACH:
+            start = GetTickCount();
+            logfile.open("qt_log.txt", std::ios::trunc);
             return DllProcessAttach(hinst);
         case DLL_PROCESS_DETACH:
+            logfile.close();
             return DllProcessDetach();
         default:
             return TRUE;
